--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-heading: Perception, Action, Learning
+heading: Robot Representations
 subheading: "From Metric-Semantic Scene Understanding to High-level Task Execution"
 image: "http://placehold.it/800x500"
 ---
