--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 heading: Robot Representations
-subheading: "From Metric-Semantic Scene Understanding to High-level Task Execution"
+subheading: "For Scene Understanding, Reasoning and Planning"
 image: "http://placehold.it/800x500"
 ---
 
